2012-10-25  senarvi  <senarvi@cis.hut.fi>

	* src/LMHistory.cc (LMHistory::rend): A NULL value represents the beginning
	of an LMHistory, or the end of reverse iteration.
	(LMHistory::ConstReverseIterator::ConstReverseIterator): Accepts NULL
	parameter (end iterator). 
	* src/LMHistory.hh (LMHistory::ConstReverseIterator): Compiles also without
	multiword support. 
	(LMHistory::ConstReverseIterator::operator ==): For iterating until end
	iterator is encountered.
	* src/TokenPassSearch.cc (TokenPassSearch::is_similar_lm_history): Use
	LMHistory::ConstReverseIterator.
	(TokenPassSearch::compute_lm_hist_hash_code):  Use
	LMHistory::ConstReverseIterator.
	(TokenPassSearch::get_lm_lookahead_score): Use
	LMHistory::ConstReverseIterator.

2012-10-01  senarvi  <senarvi@cis.hut.fi>

	* src/LMHistory.cc (LMHistory::rbegin): Returns a reverse iterator pointing
	to the last word or multiword component in the LMHistory.
	* src/LMHistory.hh (LMHistory.Word): Uses ID structure to store dictionary,
	language model, and lookahead language model IDs of a word.
	(LMHistory.Word.component): Returns a reference to an ID structure.
	(LMHistory.ConstReverseIterator): Iterates LMHistory words or multiword
	components in reverse order.
	* src/TokenPassSearch.cc (TokenPassSearch::split_and_compute_ngram_score):
	Uses LMHistory::Word::ConstReverseIterator. 
 
2012-09-25  senarvi  <senarvi@cis.hut.fi>

	* src/LMHistory.hh (LMHistory.Word): Store also word ID and lookahead LM ID
	of each component. 
	* src/TokenPassSearch.cc (TokenPassSearch::create_word_repository): Also
	stores word ID and lookahead LM ID of each component. When using a lookahead
	model, the first call is redundant.
	(TokenPassSearch::set_lookahead_ngram): Calls create_word_repository(). 
	(TokenPassSearch::split_and_create_history_ngram): Interface changed so that
	default parameter -1 can be given to final_components. 
	(TokenPassSearch::get_lm_lookahead_score): When using multiwords, consider